Changed build.gradle to ensure vcs tag updates with the project version

--- a/build.gradle
+++ b/build.gradle
@@ -111,7 +111,7 @@ bintray {
 			name = projectVersion
 			desc = 'Common Java Library'
 			released = new Date()
-			vcsTag = 'v1.0'
+			vcsTag = 'v' + projectVersion
 		}
 	}
 }
