--- a/build.gradle
+++ b/build.gradle
@@ -5,14 +5,15 @@ plugins {
 	id 'maven'
 	id 'maven-publish'
 	id 'idea'
+	id 'com.zyxist.chainsaw' version '0.3.1'
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 9
+targetCompatibility = 9
 
 def projectGroup = 'me.joshlarson'
 def projectName = 'jlcommon'
-def projectVersion = '1.3.8'
+def projectVersion = '1.5.0'
 group = projectGroup
 version = projectVersion
 
@@ -21,7 +22,7 @@ repositories {
 }
 
 dependencies {
-	compile group: 'com.google.code.findbugs', name: 'annotations', version: '+'
+	compile group: 'org.jetbrains', name: 'annotations', version: '16.0.1'
 	testCompile 'junit:junit:4.12'
 }
 
